--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ pyparsing==3.0.6
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.3
-pywin32==303
+pywin32-ctypes==0.2.0
 pywinpty==1.1.6
 PyYAML==6.0
 pyzmq==22.3.0
